--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -1,80 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Chance e.V.</title>
+  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 
-
 <body>
+  <nav class="navbar navbar-expand-md bg-light navbar-light">
+   <!-- Brand -->
+   <a class="navbar-brand" href="http://craft.dev">
+  <img src="{{ craft.assets.filename('chanceLogo.png').one().getUrl('bookOverview') }}" alt="Logo" style="width:40px;">
+  </a>
+
+   <!-- Toggler/collapsibe Button -->
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+     <span class="navbar-toggler-icon" style="color:black;"></span>
+   </button>
+
+   <!-- Navbar links -->
+   <div class="collapse navbar-collapse" id="collapsibleNavbar">
+     <ul class="navbar-nav">
+       <li class="nav-item">
+         <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> Arbeitsweise </a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> Kontakt </a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="#">Link</a>
+       </li>
+     </ul>
+   </div>
+ </nav>
 
 
-<nav class="navbar" >
-  <div class="container-fluid" style=" background-image: url('{{ craft.assets.filename('Hintergrund.png').one().url }}'); height:300px;">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-<!--Die 3 Spans stehen für die drei Striche nach dem Kollabieren der Website-->
-	<span class="icon-bar" style="background-color:black;"></span>
-        <span class="icon-bar" style="background-color:black;"></span>
-        <span class="icon-bar" style="background-color:black;"></span>
-      </button>
-      <a class="navbar-brand" href="http://craft.dev"> <img class="img-responsive"
-	src="{{ craft.assets.filename('chanceLogo.png').one().getUrl('bookOverview') }}"
-	class="d-inline-block align-top" style="margin-top:-5px;"> </a>
-<!--Negativer Abstand des Logos, da es sonst nicht auf einer Höhe mit dem Text ist-->
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
 
-      <ul class="nav navbar-nav navbar-right" style="margin-top:13px;">
-        <li class="active"><a href="http://craft.dev" style="font-weight: bold;"> Home </a></li>
-        <li><a href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> 	Über Uns </a></li>
-        <li><a href="#" style="color:black; font-weight: 		bold;"> Projekte </a></li>
-        <li><a href="#" style="color:black; font-weight: bold;"> Blog </a></li>
-        <li><a href="#" style="color:black; font-weight: bold;"> Spenden </a></li>
-        <li><a href="http://craft.dev/contact/" style="color:black; font-weight: bold;"> Für Sie </a></li>
-        <li><a href="http://craft.dev/contact/asdfsadfasdf" style="color:black; font-weight: bold;"> Kontakt </a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">{% block titel1 %} Wenn du mich siehst, hast du den Block Inhalt 				noch nicht überschrieben. {% endblock %}</div>
-        <div class="panel-body"><img src="{% block bild1 %} Wenn du mich siehst, hast du den Block Inhalt 				noch nicht überschrieben. {% endblock %}" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">{% block inhalt1 %} Wenn du mich siehst, hast du den Block Inhalt 				noch nicht überschrieben. {% endblock %}</div>
-      </div>
-    </div>
-   <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">{% block titel2 %} {% endblock %}</div>
-        <div class="panel-body"><img src="{% block bild2 %} {% endblock %}" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">{% block inhalt2 %} {% endblock %}</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-success">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-  </div>
-</div><br>
-
-	<div class="container text-center">
-	  	{% block inhalt %} Wenn du mich siehst, hast du den Block Inhalt noch
-		nicht überschrieben.
+	  {% block inhalt %} Wenn du mich siehst, hast du den Block Inhalt noch	nicht überschrieben.
 		{% endblock %}
-	</div>
 
 	<div class="container">
 		<img src="{{ image.getUrl() }}" width="{{ image.getWidth() }}" 				height="{{ image.getHeight	() }}">
