--- a/templates/_layouts/layoutKontakt.html
+++ b/templates/_layouts/layoutKontakt.html
@@ -12,13 +12,24 @@
 
 
 <body>
-<div class="sticky-top">
-  <img src="{{ craft.assets.filename('chanceLogo.png').one().getUrl('bookOverview') }}" alt="Logo" width="160" height="80" >
-</div>
+<!-- navbar-light links the colors with the background image -->
+  <nav class="navbar navbar-expand-md fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
-  <nav class="navbar navbar-expand-md fixed-top navbar navbar-light bg-light">
-   <!-- Brand -->
+    <!-- d-sm-flex: creates a flexbox for small screens;
+
+         flex-sm-nowrap: steht dafür, das auf kleinen Bildschirmen
+                die Items nicht in den Container gepackt werden sollen, sondern durchgängig angezeigt werden
+
+          mx-auto: Additionally, Bootstrap also includes an .mx-auto class for horizontally centering
+                   fixed-width block level content—that is, content that has display: block and a width
+                   set—by setting the horizontal margins to auto.
+
+          d-block: Use .d-block to simply set an element's display property to block-->
+
+    <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
+   <!-- Chance Logo -->
    <a class="navbar-brand" href="http://craft.dev">
+     <img src="{{ craft.assets.filename('chanceLogo.png').one().getUrl() }}" alt="Logo" width="160" height="160" >
   </a>
 
    <!-- Toggler/collapsibe Button -->
@@ -27,20 +38,38 @@
    </button>
 
    <!-- Navbar links -->
-   <div class="collapse navbar-collapse" id="collapsibleNavbar">
+   <div class="collapse navbar-collapse" id="collapsibleNavbar" style="margin-top: -32px; margin-left: 20px;" >
      <ul class="navbar-nav">
        <li class="nav-item">
-         <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> Arbeitsweise </a>
+         <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> HOME </a>
        </li>
        <li class="nav-item">
-         <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> Kontakt </a>
+         <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
        </li>
        <li class="nav-item">
-         <a class="nav-link" href="#">Link</a>
+         <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
        </li>
+       <li class="nav-item">
+          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> BLOG </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
+      </li>
+
      </ul>
    </div>
+   </div>
  </nav>
+
+ <div class="container-fluid" style="padding-bottom: 80px;">
+   <img class="img-fluid" src="{{ craft.assets.filename('Hintergrund.png').one().getUrl() }}" height="400">
+ </div>
 
 
   {% block block1 %} {% endblock %}
