--- a/templates/_layouts/layoutKontakt.html
+++ b/templates/_layouts/layoutKontakt.html
@@ -5,20 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <link href="http://localhost/craft/templates/_layouts/stylevorgaben.css" rel="stylesheet" />
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-
-  <style>
-@font-face {
-   font-family: myFirstFont;
-   src: url('http://localhost/craft/public/fonts/neris-black.otf');
-}
-
-* {
-   font-family: myFirstFont;
-}
-</style>
 
 </head>
 
