--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -1,52 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Bootstrap Card</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <link href="http://localhost/craft/templates/_layouts/stylevorgaben.css" rel="stylesheet" />
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+
 </head>
 
+
 <body>
-  <nav class="navbar navbar-expand-md bg-light navbar-light">
-   <!-- Brand -->
-   <a class="navbar-brand" href="http://craft.dev">
-  <img src="{{ craft.assets.filename('chanceLogo.png').one().getUrl('bookOverview') }}" alt="Logo" style="width:40px;">
-  </a>
 
-   <!-- Toggler/collapsibe Button -->
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-     <span class="navbar-toggler-icon" style="color:black;"></span>
-   </button>
+  {% include "_layouts/navbar" %}
 
-   <!-- Navbar links -->
-   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-     <ul class="navbar-nav">
-       <li class="nav-item">
-         <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> Arbeitsweise </a>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> Kontakt </a>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" href="#">Link</a>
-       </li>
-     </ul>
-   </div>
- </nav>
+  <div class="container-fluid text-center" >
+    <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" >
+    <h1> Für Mensch und Schöpfung </h1>
+    <p class="text-center" style="font-family: Anleser;"> Chance e.V. ist eine christliche, soziale und ökologische Initiative für
+nachhaltige Entwicklung im peruanischen Amazonasgebiet und bei den
+Maasai in Kenia. </p>
+ </div>
 
+ <div class="container-fluid">
+   <img class="img-fluid" src="{{ craft.assets.filename('hintergrund_home.jpg').one().getUrl() }}" >
+</div>
 
-
-	  {% block inhalt %} Wenn du mich siehst, hast du den Block Inhalt noch	nicht überschrieben.
-		{% endblock %}
-
-	<div class="container">
-		<img src="{{ image.getUrl() }}" width="{{ image.getWidth() }}" 				height="{{ image.getHeight	() }}">
-	</div>
-
+  {% block block1 %} {% endblock %}
 
 
 
