--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -1,58 +1,60 @@
+
 <!-- navbar-light links the colors with the background image -->
-  <nav class="navbar navbar-expand-md fixed-top navbar-light" data-toggle="affix" style="background-color: #f8f5f2; padding-top: 0px; margin-top: -10px;">
+ <nav class="navbar navbar-expand-md fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
-    <!-- d-sm-flex: creates a flexbox for small screens;
-         flex-sm-nowrap: steht dafür, das auf kleinen Bildschirmen
-                die Items nicht in den Container gepackt werden sollen, sondern durchgängig angezeigt werden
-          mx-auto: Additionally, Bootstrap also includes an .mx-auto class for horizontally centering
-                   fixed-width block level content—that is, content that has display: block and a width
-                   set—by setting the horizontal margins to auto.
-          d-block: Use .d-block to simply set an element's display property to block-->
+   <!-- d-sm-flex: creates a flexbox for small screens;
 
-    <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-   <!-- Chance Logo -->
+        flex-sm-nowrap: steht dafür, das auf kleinen Bildschirmen
+               die Items nicht in den Container gepackt werden sollen, sondern durchgängig angezeigt werden
 
+         mx-auto: Additionally, Bootstrap also includes an .mx-auto class for horizontally centering
+                  fixed-width block level content—that is, content that has display: block and a width
+                  set—by setting the horizontal margins to auto.
 
-   <!-- Toggler/collapsibe Button -->
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-     <span class="navbar-toggler-icon" style="color:black;"></span>
-   </button>
+         d-block: Use .d-block to simply set an element's display property to block-->
 
-   <!-- Navbar links -->
-   <div class="collapse navbar-collapse" id="collapsibleNavbar" style="font-family: nerisBlack; padding-left: 200px; padding-top: 40px;" >
-     <ul class="navbar-nav">
-       <li class="nav-item">
-         <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> HOME </a>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
-       </li>
-       <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> BLOG </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
-      </li>
+   <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
+  <!-- Chance Logo -->
 
-     </ul>
-   </div>
-   </div>
- </nav>
-
-
- <a href="http://craft.dev" style="position:fixed; top:0; z-index:9999;" id="logo">
-   <img src="{{ craft.assets.filename('chanceLogo.png').one().getUrl() }}" width="160" height="160" >
+<a class="navbar-brand" href="http://craft.dev">
+  <img src="{{ craft.assets.filename('chanceLogo.png').one().getUrl() }}" alt="Logo" width="160" height="160">
 </a>
 
- <div class="container-fluid" style="padding-bottom: 80px;">
-   <img class="img-fluid" src="{{ craft.assets.filename('Hintergrund.png').one().getUrl() }}" height="400">
+<!-- Toggler/collapsibe Button -->
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+  <span class="navbar-toggler-icon" style="color:black;"></span>
+</button>
+
+<!-- Navbar links -->
+<div class="collapse navbar-collapse" id="collapsibleNavbar" style="margin-top: -50px; margin-left: 20px;" >
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> HOME </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
+    </li>
+    <li class="nav-item">
+       <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> BLOG </a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
+   </li>
+
+  </ul>
+</div>
+</div>
+</nav>
+
+<div class="container-fluid" style="position:fixed; top:0;">
+  <div class="rectangle"></div>
 </div>
