--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -11,6 +11,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
+
+
 </head>
 
 
@@ -18,12 +20,22 @@
 
   {% include "_layouts/navbar" %}
 
-  <div class="container-fluid text-center" >
-    <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" >
-    <h1> Für Mensch und Schöpfung </h1>
-    <p class="text-center" style="font-family: Anleser;"> Chance e.V. ist eine christliche, soziale und ökologische Initiative für
-nachhaltige Entwicklung im peruanischen Amazonasgebiet und bei den
-Maasai in Kenia. </p>
+  <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 80px;">
+
+    <div class="row">
+      <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" height="500" >
+
+    <div class="col-2"> </div>
+
+   <div class="col-8">
+
+
+
+    <p id="text1"> <h1> Für Mensch und Schöpfung </h1> Chance e.V. ist eine christliche, soziale und ökologische Initiative für
+      nachhaltige Entwicklung im peruanischen Amazonasgebiet und bei den
+      Maasai in Kenia. </p>
+</div>
+</div>
  </div>
 
  <div class="container-fluid">
@@ -31,9 +43,6 @@ Maasai in Kenia. </p>
 </div>
 
   {% block block1 %} {% endblock %}
-
-
-
 
 </body>
 </html>
