--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -31,8 +31,8 @@
    <div class="col-md-8 col-lg-6">
 
 
-     <div id="text1">
-      <h1 style="padding-bottom: 40px"> Für Mensch und Schöpfung </h1>   <p> Chance e.V. ist eine christliche, soziale und ökologische Initiative für
+     <div id="text1" style="padding-bottom:80px; ">
+      <h1> Für Mensch und Schöpfung </h1>   <p> Chance e.V. ist eine christliche, soziale und ökologische Initiative für
       nachhaltige Entwicklung im peruanischen Amazonasgebiet und bei den
       Maasai in Kenia. </p>
     </div>
@@ -43,6 +43,8 @@
  <div class="container-fluid">
    <img class="img-fluid" src="{{ craft.assets.filename('hintergrund_home.jpg').one().getUrl() }}" >
 </div>
+
+<img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="margin-top: 5%; position: absolute; float:left; width: 40%; top: 0; z-index: -999;">
 
 
   {% block block1 %} {% endblock %}
