--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -17,7 +17,7 @@
   <!-- Chance Logo -->
 
 <a class="navbar-brand" href="http://craft.dev">
-  <img src="{{ craft.assets.filename('chanceLogo.png').one().getUrl() }}" alt="Logo" width="160" height="120">
+  <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
 </a>
 
 <!-- Toggler/collapsibe Button -->
