erster versuch des dropdown-menüs, geht noch untereinander auf

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -31,8 +31,21 @@
     <li class="nav-item">
       <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> HOME </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Arbeitsweise</a>                 <li class="dropdown-divider"></li>
+        <a class="dropdown-item" href="#">Konzept</a>
+        <a class="dropdown-item" href="#">Leitbild</a>
+        <a class="dropdown-item" href="#">Motivation</a>
+        <a class="dropdown-item" href="#">Der Verein</a>
+        <a class="dropdown-item" href="#">Transparenz</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="http://craft.dev/contact"> Empfehlung </a>
+          <div class="dropdown-menu" id="ueberUnsDritteEbene">
+            <a class="dropdown-item" href="#">1. Empfehlung</a>
+            <a class="dropdown-item" href="#">2. Empfehlung</a>
+          </div>
+      </div>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
