--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -13,6 +13,7 @@
 
 
 
+
 </head>
 
 
@@ -28,10 +29,10 @@
 
       <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-    <div class="col-md-2 col-lg-3">
+    <div class="col-sm-2 col-md-3 col-lg-4">
     </div>
 
-   <div class="col-md-8 col-lg-6">
+   <div class="col-sm-8 col-md-6 col-lg-4">
 
 
      <div id="text1" style="padding-bottom:80px; ">
