--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -1,71 +1,99 @@
 
 <!-- navbar-light links the colors with the background image -->
- <nav class="navbar navbar-expand-md fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
+<nav class="navbar navbar-expand-md fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
 
-   <!-- d-sm-flex: creates a flexbox for small screens;
+  <!-- d-sm-flex: creates a flexbox for small screens;
 
-        flex-sm-nowrap: steht dafür, das auf kleinen Bildschirmen
-               die Items nicht in den Container gepackt werden sollen, sondern durchgängig angezeigt werden
+  flex-sm-nowrap: steht dafür, das auf kleinen Bildschirmen
+  die Items nicht in den Container gepackt werden sollen, sondern durchgängig angezeigt werden
 
-         mx-auto: Additionally, Bootstrap also includes an .mx-auto class for horizontally centering
-                  fixed-width block level content—that is, content that has display: block and a width
-                  set—by setting the horizontal margins to auto.
+  mx-auto: Additionally, Bootstrap also includes an .mx-auto class for horizontally centering
+  fixed-width block level content—that is, content that has display: block and a width
+  set—by setting the horizontal margins to auto.
 
-         d-block: Use .d-block to simply set an element's display property to block-->
+  d-block: Use .d-block to simply set an element's display property to block-->
 
-   <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-  <!-- Chance Logo -->
+  <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
+    <!-- Chance Logo -->
 
-<a class="navbar-brand" href="http://craft.dev">
-  <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
-</a>
+    <a class="navbar-brand" href="http://craft.dev">
+      <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" alt="Logo" width="160" height="120">
+    </a>
 
-<!-- Toggler/collapsibe Button -->
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-  <span class="navbar-toggler-icon" style="color:black;"></span>
-</button>
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon" style="color:black;"></span>
+    </button>
 
-<!-- Navbar links -->
-<div class="collapse navbar-collapse" id="collapsibleNavbar" style="margin-top: -50px; margin-left: 20px;" >
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> HOME </a>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Arbeitsweise</a>                 <li class="dropdown-divider"></li>
-        <a class="dropdown-item" href="#">Konzept</a>
-        <a class="dropdown-item" href="#">Leitbild</a>
-        <a class="dropdown-item" href="#">Motivation</a>
-        <a class="dropdown-item" href="#">Der Verein</a>
-        <a class="dropdown-item" href="#">Transparenz</a>
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="http://craft.dev/contact"> Empfehlung </a>
-          <div class="dropdown-menu" id="ueberUnsDritteEbene">
-            <a class="dropdown-item" href="#">1. Empfehlung</a>
-            <a class="dropdown-item" href="#">2. Empfehlung</a>
-          </div>
-      </div>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
-    </li>
-    <li class="nav-item">
-       <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
-   </li>
-   <li class="nav-item">
-     <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
-   </li>
-   <li class="nav-item">
-     <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> BLOG </a>
-   </li>
-   <li class="nav-item">
-     <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
-   </li>
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar" style="margin-top: -50px; margin-left: 20px;" >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> HOME </a>
+        </li>
+        <div class="dropdown">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
 
-  </ul>
-</div>
-</div>
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+              <li class="dropdown-item"> <a href="#"> Arbeitsweise</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"> <a href="#"> Konzept</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"> <a href="#"> Leitbild</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"> <a href="#"> Motivation</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"> <a href="#"> Der Verein</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"> <a href="#"> Transparenz</a> </li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Empfehlungen</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">Second level</a></li>
+                  <li class="dropdown-submenu">
+                    <a class="dropdown-item" href="#">Even More..</a>
+                    <ul class="dropdown-menu">
+                      <li class="dropdown-item"><a href="#">3rd level</a></li>
+                      <li class="dropdown-submenu"><a class="dropdown-item" href="#">another level</a>
+                        <ul class="dropdown-menu">
+                          <li class="dropdown-item"><a href="#">4th level</a></li>
+                          <li class="dropdown-item"><a href="#">4th level</a></li>
+                          <li class="dropdown-item"><a href="#">4th level</a></li>
+                        </ul>
+                      </li>
+                      <li class="dropdown-item"><a href="#">3rd level</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-item"><a href="#">Second level</a></li>
+                  <li class="dropdown-item"><a href="#">Second level</a></li>
+                </ul>
+              </li>
+            </li>
+          </ul>
+        </div>
+        <li class="nav-item">
+          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> BLOG </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
+        </li>
+
+      </ul>
+    </div>
+  </div>
 </nav>
 
 <div class="container-fluid" style="position:fixed; top:0;">
