funktionierendes Dropdown mit allen Originalangaben des Autors..werde danach einige löschen

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -53,23 +53,11 @@
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="#">Empfehlungen</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">Second level</a></li>
-                  <li class="dropdown-submenu">
-                    <a class="dropdown-item" href="#">Even More..</a>
-                    <ul class="dropdown-menu">
-                      <li class="dropdown-item"><a href="#">3rd level</a></li>
-                      <li class="dropdown-submenu"><a class="dropdown-item" href="#">another level</a>
-                        <ul class="dropdown-menu">
-                          <li class="dropdown-item"><a href="#">4th level</a></li>
-                          <li class="dropdown-item"><a href="#">4th level</a></li>
-                          <li class="dropdown-item"><a href="#">4th level</a></li>
-                        </ul>
-                      </li>
-                      <li class="dropdown-item"><a href="#">3rd level</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown-item"><a href="#">Second level</a></li>
-                  <li class="dropdown-item"><a href="#">Second level</a></li>
+                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Empfehlung</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">2. Empfehlung</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">3. Empfehlung</a></li>
                 </ul>
               </li>
             </li>
