--- a/templates/_layouts/stylevorgaben.css
+++ b/templates/_layouts/stylevorgaben.css
@@ -59,6 +59,16 @@ p {
   height: 80px;
   background-color: #f8f5f2; }
 
+.dropdown-menu {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+  .dropdown-menu>li {
+    margin-top: -1px;
+    margin-bottom: -1px;
+
+  }
 
   .dropdown-submenu {
       position: relative;
@@ -67,7 +77,7 @@ p {
   .dropdown-submenu>.dropdown-menu {
       top: 0;
       left: 100%;
-      margin-top: -6px;
+      margin-top: -100px;
       margin-left: -1px;
       -webkit-border-radius: 0 6px 6px 6px;
       -moz-border-radius: 0 6px 6px;
@@ -88,7 +98,7 @@ p {
       border-style: solid;
       border-width: 5px 0 5px 5px;
       border-left-color: #ccc;
-      margin-top: 5px;
+      margin-top: 15px;
       margin-right: -10px;
   }
 
