Hinzufügen der Kategorien an Navbar

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -63,12 +63,95 @@
             </li>
           </ul>
         </div>
-        <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
-        </li>
+
+        <div class="dropdown">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
+
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+              <li class="dropdown-item"> <a href="#"> Wo wir arbeiten</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Programme</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">Dorfentwicklung</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">Kinderpaten</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">Umwelt- und Naturschutz</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-item"> <a href="#"> Themen</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Erfahrungsberichte</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
+                </ul>
+              </li>
+
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Projektberichte</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
+                </ul>
+              </li>
+            </li>
+          </ul>
+        </div>
+
+
+        <div class="dropdown">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
+
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Allgemein Spenden</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">Einmalig</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">Regelmäßig</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-item"> <a href="#"> Themen</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Erfahrungsberichte</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
+                </ul>
+              </li>
+
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Projektberichte</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
+                </ul>
+              </li>
+            </li>
+          </ul>
+        </div>
+
+
         <li class="nav-item">
           <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
         </li>
