Alle Kategorien in der Navbar implementiert aber die Größen der verschiedenen Menüs sind unterschiedlich

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -124,37 +124,81 @@
                   <li class="dropdown-item"><a href="#">Regelmäßig</a></li>
                 </ul>
               </li>
-              <li class="dropdown-item"> <a href="#"> Themen</a> </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Erfahrungsberichte</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
-                </ul>
-              </li>
 
               <li class="dropdown-submenu">
-                <a  class="dropdown-item" tabindex="-1" href="#">Projektberichte</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-item"><a tabindex="-1" href="#">1. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">2. Bericht</a></li>
-                  <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"><a href="#">3. Bericht</a></li>
-                </ul>
-              </li>
+               <a  class="dropdown-item" tabindex="-1" href="#">Programmbezogen Spenden</a>
+               <ul class="dropdown-menu">
+                 <li class="dropdown-submenu">
+                   <a class="dropdown-item" href="#">Einmalig</a>
+                   <ul class="dropdown-menu">
+                     <li class="dropdown-item"><a href="#">Länderpate</a></li>
+                     <li class="dropdown-item"><a href="#">Dorfpate</a></li>
+                     <li class="dropdown-item"><a href="#">Waldpate</a></li>
+                   </ul>
+                   <a class="dropdown-item" href="#">Regelmäßig</a>
+                   <ul class="dropdown-menu">
+                     <li class="dropdown-item"><a href="#">Länderpate</a></li>
+                     <li class="dropdown-item"><a href="#">Dorfpate</a></li>
+                     <li class="dropdown-item"><a href="#">Kinderpate plus</a></li>
+                     <li class="dropdown-item"><a href="#">Waldpate</a></li>
+                   </ul>
+                 </li>
+                 <li class="dropdown-item"><a href="#">Schenken und Spenden</a></li>
+                 <li class="dropdown-item"><a href="#">Einkaufen und Spenden</a></li>
+                 <li class="dropdown-item"><a href="#">Lastschrifttermine</a></li>
+
+               </ul>
+             </li>
+           </li>
+
             </li>
           </ul>
         </div>
 
 
-        <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
-        </li>
+        <div class="dropdown">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
+
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+              <li class="dropdown-item"> <a href="#"> Chance e.V. kommt zu Ihnen</a> </li>
+              <li class="dropdown-divider"></li>
+
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Freiwilligendienst</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">Mit "weltwärts" nach Peru oder Kenia</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">Weitere Einsatzmöglichkeiten in Peru</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">Deine Bewerbung</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">Erfahrungsberichte</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-item"> <a href="#">Projektbesuch</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-submenu">
+                <a  class="dropdown-item" tabindex="-1" href="#">Für Sie daheim</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item"><a tabindex="-1" href="#">"Consumer Missions"</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">Kaffee - unsere tägliche Chance</a></li>
+                  <li class="dropdown-divider"></li>
+                  <li class="dropdown-item"><a href="#">Bäume für Kenia statt Blumen für Euro</a></li>
+                </ul>
+              </li>
+
+              <li class="dropdown-item"> <a href="#">Presse und Downloads</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"> <a href="#">Literaturtipps</a> </li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item"> <a href="#">Zitat</a> </li>
+
+            </li>
+          </ul>
+        </div>
         <li class="nav-item">
           <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> BLOG </a>
         </li>
