--- a/templates/_layouts/stylevorgaben.css
+++ b/templates/_layouts/stylevorgaben.css
@@ -67,26 +67,27 @@ p {
   border: none;
 }
 
+/* Der Abstand zwischen den einzelnen Links wird verkleinert von der Hauptleiste */
   .dropdown-menu>li {
     margin-top: 0px;
     margin-bottom: 0px;
 
   }
 
-  .dropdown-submenu {
-    position: relative;
-
-  }
-
+/* Alle dropdown-menüs auswählen, die ein submenu als Vater haben
+ (Im Code wird ein Untermenu zuvor mit einem Submenu bekanntgemacht)*/
   .dropdown-submenu>.dropdown-menu {
       top: 0;
       left: 100%;
-      margin-top: -100px;
+      height: 100%;
       margin-left: -1px;
+      margin-top: -1px;
+
       border-radius: 0 0 0 0;
       background-color: #e3d7cb;
   }
 
+/* Block-Boxen nehmen die gesamte Breite des Elternelementes ein */
   .dropdown-submenu:hover>.dropdown-menu {
       display: block;
   }
