Anpassen der Spenden-navbar, Hintergrundbilder auf volle Seitenbreite setzen,

--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -18,10 +18,15 @@
 
 
 <body>
-  
+
+
+      <div class="container-fluid no-padding" style="padding-top: 100px;">
+        <img class="img-fluid" src="{{ craft.assets.filename('chance-ueber-uns-header.jpg').one().getUrl() }}">
+      </div>
+
   {% include "_layouts/navbar" %}
 
-  <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 200px; position: relative;">
+  <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 50px; position: relative;">
 
 
 
@@ -29,24 +34,22 @@
 
       <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-      <div class="col-sm-2 col-md-3 col-lg-4">
+      <div class="col-sm-2 col-md-3">
       </div>
 
-      <div class="col-sm-8 col-md-6 col-lg-4">
+      <div class="col-sm-8 col-md-6">
 
 
         <div id="text1" style="padding-bottom:80px; ">
-          <h1> Für Mensch und Schöpfung </h1>   <p> Chance e.V. ist eine christliche, soziale und ökologische Initiative für
-            nachhaltige Entwicklung im peruanischen Amazonasgebiet und bei den
-            Maasai in Kenia. </p>
+          <h1> Für ein gelingendes, selbstbestimmtes Leben in Einklang mit der Schöpfung </h1>
+          <p> Begleiten, bestärken, befähigen und bewahren – unser Ansatz zu einem
+            selbstbestimmten und gelingendem Leben. Motiviert von der Liebe Gottes für Mensch und Natur.
+          </p>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container-fluid">
-      <img class="img-fluid" src="{{ craft.assets.filename('chance-ueber-uns-header.jpg').one().getUrl() }}" >
-    </div>
 
 
 
