--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -125,7 +125,7 @@
                 </ul>
               </li>
 
-              <li class="dropdown-submenu">
+              <li class="dropdown-submenu" style="height: 100px;">
                <a  class="dropdown-item" tabindex="-1" href="#">Programmbezogen Spenden</a>
                <ul class="dropdown-menu">
                  <li class="dropdown-submenu">
@@ -211,6 +211,6 @@
   </div>
 </nav>
 
-<div class="container-fluid" style="position:fixed; top:0;">
+<div class="container-fluid" style="  position:fixed; top:0; z-index: 900;">
   <div class="rectangle"></div>
 </div>
