EIn funktionierendes Box-Design auf der Startseite hingekriegt

--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -10,7 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-
+  <script src="http://localhost/craft/templates/_layouts/javascript.js"> </script>
 
 
 
@@ -34,8 +34,7 @@
 
       <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-      <div class="col-sm-2 col-md-3">
-      </div>
+      <div class="col-sm-2 col-md-3">       </div>
 
       <div class="col-sm-8 col-md-6">
 
@@ -49,8 +48,6 @@
         </div>
       </div>
     </div>
-
-
 
 
     {% block block1 %} {% endblock %}
