--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -26,14 +26,14 @@
     </button>
 
     <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar" style="margin-top: -50px; margin-left: 20px;" >
+    <div class="collapse navbar-collapse" id="collapsibleNavbar"  >
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="http://craft.dev/uber-uns/arbeitsweise" style="color:black; font-weight: bold;"> HOME </a>
         </li>
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            <a class="nav-link " data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
             aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -66,7 +66,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
             aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> PROJEKTE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -112,7 +112,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
             aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> SPENDEN </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -158,7 +158,7 @@
 
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
+            <a class="nav-link" data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
             aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> FÜR SIE </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
@@ -200,7 +200,7 @@
           </ul>
         </div>
         <li class="nav-item">
-          <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> BLOG </a>
+          <a class="nav-link" href="http://craft.dev/blog" style="color:black; font-weight: bold;"> BLOG </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> KONTAKT </a>
@@ -212,5 +212,5 @@
 </nav>
 
 <div class="container-fluid" style="  position:fixed; top:0; z-index: 900;">
-  <div class="rectangle"></div>
+  <div class="rectangle" id="rechteck"></div>
 </div>
