--- a/templates/_layouts/stylevorgaben.css
+++ b/templates/_layouts/stylevorgaben.css
@@ -57,16 +57,21 @@ p {
   font-size: 24px;
 }
 
+
 /* Der graue Balken für die Navbar wird damit gestylt */
 .rectangle {
-  height: 80px;
+  height: 70px;
   background-color: #f8f5f2;
   }
 
-/*Das geforderte Padding der Navbar*/
+  #collapsibleNavbar {
+    margin-top: -40px;
+  }
+
+/*Das geforderte Padding der dropdown-Navbar, also nicht der immer sichtbaren Leiste.*/
 .dropdown-menu {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 40px;
+  padding-bottom: 20px;
   border-radius: 0 0 0 0;
   border: none;
 }
@@ -88,7 +93,8 @@ p {
   }
 
 /* Alle dropdown-menüs auswählen, die ein submenu als Vater haben
- (Im Code wird ein Untermenu zuvor mit einem Submenu bekanntgemacht)*/
+ (Im Code wird ein Untermenu zuvor mit einem Submenu bekanntgemacht)
+ Also alles Untermenus werden ausgewählt. */
   .dropdown-submenu>.dropdown-menu {
       top: 0;
       left: 100%;
