Anpassen der Textbreite an die Vorgabe, hinzufügen des 8-er layouts

--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -211,6 +211,6 @@
   </div>
 </nav>
 
-<div class="container-fluid" style="  position:fixed; top:0; z-index: 900;">
+<div class="container-fluid no-padding" style="  position:fixed; top:0; z-index: 900;">
   <div class="rectangle" id="rechteck"></div>
 </div>
