--- a/templates/_layouts/layoutHome.html
+++ b/templates/_layouts/layoutHome.html
@@ -29,25 +29,18 @@
   <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 50px; position: relative;">
 
 
-
-    <div class="row">
-
       <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-      <div class="col-sm-2 col-md-3">       </div>
 
-      <div class="col-sm-8 col-md-6">
-
-
+      <div class="container Achter-Spaltenlayout">
         <div id="text1" style="padding-bottom:80px; ">
-          <h1> Für ein gelingendes, selbstbestimmtes Leben in Einklang mit der Schöpfung </h1>
+          <h1 style="padding-bottom: 30px;"> Für ein gelingendes, selbstbestimmtes Leben in Einklang mit der Schöpfung </h1>
           <p> Begleiten, bestärken, befähigen und bewahren – unser Ansatz zu einem
             selbstbestimmten und gelingendem Leben. Motiviert von der Liebe Gottes für Mensch und Natur.
           </p>
           </div>
         </div>
       </div>
-    </div>
 
 
     {% block block1 %} {% endblock %}
