--- a/templates/_layouts/navbar.html
+++ b/templates/_layouts/navbar.html
@@ -33,8 +33,8 @@
         </li>
         <div class="dropdown">
           <li class="nav-item dropdown">
-            <a class="nav-link " data-toggle="dropdown" id="dropdownMenu1" aria-haspopup="true"
-            aria-expanded="false" href="http://craft.dev/contact" style="color:black; font-weight: bold;"> ÜBER UNS </a>
+            <a class="nav-link " data-toggle="dropdown" id="dropdownMenu1"
+            href="http://craft.dev/uber-uns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
 
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
               <li class="dropdown-item"> <a href="#"> Arbeitsweise</a> </li>
